<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSuccessMain"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="#efffe9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/userNameTextView"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hrdButton"
                android:id="@+id/hrdButton"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom2"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/boardButton"
                android:id="@+id/boardButton"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/modifyButton"
                android:id="@+id/modifyButton"
                android:background="@drawable/button_custom2"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/logoutButton"
                android:id="@+id/logoutButton"
                android:background="@drawable/button_custom2"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>