<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentAttendanceActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#9baec8"
        android:gravity="center">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/wholeSearchButton"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_custom1"
                    android:text="@string/wholeSearch"
                    android:textColor="#274c5e" />

                <Button
                    android:id="@+id/search2to3Button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_custom1"
                    android:text="@string/search2to3"
                    android:textColor="#274c5e" />

                <Button
                    android:id="@+id/search3to4Button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_custom1"
                    android:text="@string/search3to4"
                    android:textColor="#274c5e" />

                <Button
                    android:id="@+id/search4to5Button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_custom1"
                    android:text="@string/search4to5"
                    android:textColor="#274c5e" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/studentInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="70dp"
        android:paddingRight="70dp">


        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/refreshButton"
            android:background="@drawable/searchicon"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@id/homeButton"
            android:background="@drawable/refreshicon"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/homeicon" />

    </RelativeLayout>

</LinearLayout>